--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -6,3 +6,9 @@ database:
   username: "postgres"
   password: "password"
   database_name: "newsletter"
+email_client:
+  base_url: "localhost"
+  sender_email: "test@example.com"
+  authorization_token: "test_token"
+  timeout_milliseconds: 10000
+  
