--- a/configuration/production.yaml
+++ b/configuration/production.yaml
@@ -2,3 +2,7 @@ application:
   host: "0.0.0.0"
 database:
   require_ssl: true
+email_client:
+  base_url: "localhost"
+  sender_email: "test@example.com"
+  authorization_token: "my-secret-token"
