test: power on a real server

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -75,6 +75,10 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version-file: ./go.mod
+        
+    - name: Format-Check
+      run: |
+        test -z $(go fmt ./...)
 
     - name: Test
       run: |
